--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -999,14 +999,12 @@ Ill set this up later as well
 #+begin_src emacs-lisp
 (use-package subsonic)
 #+end_src
-** mpdel
-MPD controller for emacs
-(will only work on linux obviously)
+** EMMS
+good lodr emacs music
 #+begin_src emacs-lisp
-  (when (eq system-type 'gnu/linux)
-    (use-package mpdel
-      :config
-      (mpdel-mode)))
+  (use-package emms
+    :config
+    (emms-all))
 #+end_src
 ** GPTel
 its over the machines took over guys can i get my likes now
