--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1180,7 +1180,7 @@ I'm scared
         (call-process-shell-command "feh --bg-fill ~/background.png" nil 0)     
         (set-frame-parameter (selected-frame)'alpha '(90 . 90))
         ;; (call-process-shell-command "~/.config/polybar/startpolybar" nil 0)     
-        ;; (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
+        (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
         ;; startup
         ;; (call-process-shell-command "nm-applet" nil 0)     
         ;; (call-process-shell-command "blueman-applet" nil 0)     
