--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1183,11 +1183,11 @@ I'm scared
         ;; (call-process-shell-command "~/.config/polybar/startpolybar" nil 0)     
         (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
         ;; startup
-        ;; (call-process-shell-command "nm-applet" nil 0)     
-        ;; (call-process-shell-command "blueman-applet" nil 0)     
+        (call-process-shell-command "nm-applet" nil 0)     
+        (call-process-shell-command "blueman-applet" nil 0)     
         ;; (call-process-shell-command "nextcloud" nil 0)     
         ;; (call-process-shell-command "bitwarden" nil 0)     
-        ;; (call-process-shell-command "flameshot" nil 0)  
+        (call-process-shell-command "flameshot" nil 0)  
         )
 
       ;; background
