--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -436,6 +436,17 @@ kept-old-versions 5)
     (require 'vertico-directory)
     (vertico-mode))
 #+end_src
+*** Vertico Postframe
+#+begin_src emacs-lisp
+  (use-package vertico-posframe
+    :config
+    (setq vertico-posframe-parameters
+         '((left-fringe . 8)
+           (right-fringe . 8)))
+    (vertico-posframe-mode 1)
+    )
+
+#+end_src
 ** Marginalia
 #+begin_src emacs-lisp
 (use-package marginalia
