--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -440,12 +440,7 @@ kept-old-versions 5)
 #+begin_src emacs-lisp
   (use-package vertico-posframe
     :config
-    (setq vertico-posframe-parameters
-         '((left-fringe . 8)
-           (right-fringe . 8)))
-    (vertico-posframe-mode 1)
-    )
-
+    (vertico-posframe-mode 1))
 #+end_src
 ** Marginalia
 #+begin_src emacs-lisp
