--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -563,8 +563,8 @@ kept-old-versions 5)
   (corfu-cycle t)
   (corfu-auto t)
   (corfu-preview-current nil)
-  (corfu-quit-at-boundary t)
-  (corfu-quit-no-match t)
+  (corfu-quit-at-boundary nil)
+  (corfu-quit-no-match nil)
   (corfu-min-chars 1)
   :config
   (global-corfu-mode 1)
