--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -246,6 +246,7 @@ kept-old-versions 5)
   (use-package doom-modeline
     :custom
     (doom-modeline-height 35)
+    (doom-modeline-modal-modern-icon nil)
     :init (doom-modeline-mode 1))
 #+end_src
 ** Editor Configuration
