--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1216,14 +1216,14 @@ GNU patch review metho dor sometihng idk
 #+end_src
 ** Org Roam
 #+begin_src emacs-lisp
-(use-package org-roam
-  :custom
-g (org-roam-directory "~/org/notes")
-  :bind (("C-c n l" . org-roam-buffer-toggle)
-	 ("C-c n f" . org-roam-node-find)
-	 ("C-c n i" . org-roam-node-insert))
-  :config
-  (org-roam-setup))
+  (use-package org-roam
+    :custom
+    (org-roam-directory "~/org/notes")
+    :bind (("C-c n l" . org-roam-buffer-toggle)
+  	 ("C-c n f" . org-roam-node-find)
+  	 ("C-c n i" . org-roam-node-insert))
+    :config
+    (org-roam-setup))
 #+end_src
 ** Org-wild-notifier
 #+begin_src emacs-lisp
