--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1059,7 +1059,30 @@ Will configure later, (use elfeed protocol ok ty)
 ** Matrix
 Ill set this up later as well
 #+begin_src emacs-lisp
-(use-package ement)
+  (use-package ement
+  :commands ement-connect
+  :custom
+  (ement-notify-dbus-p nil) ;; Turn off notifications
+  (ement-sessions-file "~/.cache/ement.el")
+  (ement-room-list-default-keys
+   '(;; Group all invitations (this group will appear first since the rooms are
+     ;; already sorted first).
+     ((membership :status 'invite))
+
+     ;; Group all left rooms (this group will appear last, because the rooms are already
+     ;; sorted last).
+     ((membership :status 'leave))
+
+     ;; Group all favorite rooms, which are already sorted first.
+     (favourite)
+
+     ;; Group all low-priority rooms, which are already sorted last.
+     (low-priority)
+
+     ;; Group other rooms which are unread.
+     (unread)
+     (people)
+     freshness)))
 #+end_src
 ** Subsonic
 #+begin_src emacs-lisp
