--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1054,22 +1054,24 @@ Will configure later
 ** RSS
 Will configure later, (use elfeed protocol ok ty)
 #+begin_src emacs-lisp
-  (use-package elfeed
-    :config
-    (setq elfeed-use-curl t)
-    (elfeed-set-timeout 36000)
-    )
+    (use-package elfeed
+      :config
+      (setq elfeed-use-curl t)
+      (elfeed-set-timeout 36000)
+      )
 
-  (use-package elfeed-protocol
-    :config
-    ;; setup feeds
-    (setq elfeed-protocol-feeds '(("fever+https://sako@rss.sako.box"
-  				 :api-url "https://rss.sako.box/fever/"
-  				 :password (password-store-get "Selfhosted/rss.sako.box/fever"))))
+    (use-package elfeed-protocol
+      :config
+      ;; setup feeds
+      (setq elfeed-protocol-fever-update-unread-only nil)
+      (setq elfeed-protocol-fever-fetch-category-as-tag t)
+      (setq elfeed-protocol-feeds '(("fever+https://sako@rss.sako.box"
+    				 :api-url "https://rss.sako.box/fever/"
+    				 :password (password-store-get "Selfhosted/rss.sako.box/fever"))))
 
-    ;; enable elfeed-protocol
-    (setq elfeed-protocol-enabled-protocols '(fever))
-    (elfeed-protocol-enable))
+      ;; enable elfeed-protocol
+      (setq elfeed-protocol-enabled-protocols '(fever))
+      (elfeed-protocol-enable))
 #+end_src
 ** Matrix
 Ill set this up later as well
