--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -912,12 +912,15 @@ this should be useful later
 #+end_src
 ** Typescript
 #+begin_src emacs-lisp
-    (add-hook 'typescript-ts-mode 'eglot-ensure) 
-    (add-hook 'tsx-ts-mode 'eglot-ensure) 
+  (add-hook 'typescript-ts-mode 'eglot-ensure) 
+  (add-hook 'tsx-ts-mode 'eglot-ensure) 
 
-    (setq treesit-language-source-alist
+  (add-to-list 'auto-mode-alist '(".*\\.ts" . typescript-ts-mode))
+  (add-to-list 'auto-mode-alist '(".*\\.tsx" . tsx-ts-mode))
+
+  (setq treesit-language-source-alist
   	'((typescript "https://github.com/tree-sitter/tree-sitter-typescript" "master" "typescript/src" nil nil)
-            (tsx "https://github.com/tree-sitter/tree-sitter-typescript" "master" "tsx/src" nil nil)))
+          (tsx "https://github.com/tree-sitter/tree-sitter-typescript" "master" "tsx/src" nil nil)))
 #+end_src
 ** Astro
 #+begin_src emacs-lisp
