--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1038,6 +1038,7 @@ this should be useful later
     :ensure t
     :config
     (setq rustic-format-on-save nil)
+    (setq rustic-lsp-client 'eglot)
     :custom
     (rustic-cargo-use-last-stored-arguments t))
 #+end_src
