--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -201,9 +201,9 @@ kept-old-versions 5)
 #+end_src
 ** Appearance
 #+begin_src emacs-lisp
-  (use-package ef-themes
+  (use-package doom-themes
     :config
-    (load-theme 'ef-maris-dark t))
+    (load-theme 'doom-sourcerer t))
 
   ;; emacsclient things
   (setq frame-resize-pixelwise t)
