stupid corfu minibuffer fix

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -575,7 +575,7 @@ kept-old-versions 5)
     (defun corfu-enable-in-minibuffer ()
       "Enable Corfu in the minibuffer if `completion-at-point' is bound."
       (when (where-is-internal #'completion-at-point (list (current-local-map)))
-        ;; (setq-local corfu-auto nil) ;; Enable/disable auto completion
+        (setq-local corfu-auto nil) ;; Enable/disable auto completion
         (setq-local corfu-echo-delay nil ;; Disable automatic echo and popup
                     corfu-popupinfo-delay nil)
         (corfu-mode 1)))
