--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -243,14 +243,14 @@ kept-old-versions 5)
 #+end_src
 ** Modeline
 #+begin_src emacs-lisp
-  (use-package nerd-icons
-    :custom
-    (nerd-icons-font-family "JetBrainsMono NF"))
-  (use-package doom-modeline
-    :custom
-    (doom-modeline-height 35)
-    (doom-modeline-modal-modern-icon nil)
-    :init (doom-modeline-mode 1))
+  ;; (use-package nerd-icons
+  ;;   :custom
+  ;;   (nerd-icons-font-family "JetBrainsMono NF"))
+  ;; (use-package doom-modeline
+  ;;   :custom
+  ;;   (doom-modeline-height 35)
+  ;;   (doom-modeline-modal-modern-icon nil)
+  ;;   :init (doom-modeline-mode 1))
 #+end_src
 ** Editor Configuration
 #+begin_src emacs-lisp
