--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -211,7 +211,7 @@ kept-old-versions 5)
 
   (use-package ef-themes
     :config
-    (load-theme 'ef-duo-dark t))
+    (load-theme 'ef-dark t))
 
   ;; emacsclient things
   (setq frame-resize-pixelwise t)
