--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1184,7 +1184,9 @@ GNU patch review metho dor sometihng idk
 
     (setq gmail-2-mail-address
     	(string-trim (shell-command-to-string "pass accounts.google.com/two | awk 'BEGIN {ORS=\"\"} FNR == 2{gsub(\"login: \", \"\"); gsub(/ /, \"\"); print}'")))
-    
+
+    (setq mu4e-context-policy 'pick-first)
+    (setq mu4e-compose-context-policy 'always-ask)
     (setq mu4e-contexts
     	(list
     	 ;; outlook
@@ -1199,7 +1201,13 @@ GNU patch review metho dor sometihng idk
     		  (mu4e-drafts-folder . "/Outlook/Drafts")
     		  (mu4e-sent-folder . "/Outlook/Sent")
     		  (mu4e-refile-folder . "/Outlook/Inbox")
-    		  (mu4e-trash-folder . "/Outlook/Deleted")))
+    		  (mu4e-trash-folder . "/Outlook/Deleted")
+  		  ;; todo stmpmail and compose signatures
+  		  (mu4e-maildir-shortcuts . (
+  					     ("/Outlook/Inbox" . ?i)
+  					     ("/Outlook/Sent" . ?s)
+  					     ("/Outlook/Drafts" . ?d)
+  		  ))))
     	 (make-mu4e-context
     	  :name "Proton"
     	  :match-func
@@ -1211,7 +1219,14 @@ GNU patch review metho dor sometihng idk
     		  (mu4e-drafts-folder . "/Proton/Drafts")
     		  (mu4e-sent-folder . "/Proton/Sent")
     		  (mu4e-refile-folder . "/Proton/Inbox")
-    		  (mu4e-trash-folder . "/Proton/Trash")))
+    		  (mu4e-trash-folder . "/Proton/Trash"))
+  	  ;; todo stmpmail and compose signatures
+  	  (mu4e-maildir-shortcuts . (
+  				     ("/Proton/Inbox" . ?i)
+  				     ("/Proton/Sent" . ?s)
+  				     ("/Proton/Drafts" . ?d)
+  		  )
+  	  ))
   	 (make-mu4e-context
   	  :name "Gmail Personal 1"
   	  :match-func
@@ -1223,7 +1238,14 @@ GNU patch review metho dor sometihng idk
   		  (mu4e-drafts-folder . "/Gmail-Personal-1/Drafts")
   		  (mu4e-sent-folder . "/Gmail-Personal-1/Sent Mail")
   		  (mu4e-refile-folder . "/Gmail-Personal-1/Inbox")
-  		  (mu4e-trash-folder . "Gmail-Personal-1/Trash")))
+  		  (mu4e-trash-folder . "Gmail-Personal-1/Trash")
+  		  ;; todo stmpmail and compose signatures
+  		  (mu4e-maildir-shortcuts . (
+  					     ("/Gmail-Personal-1/Inbox" . ?i)
+  					     ("/Gmail-Personal-1/Sent Mail" . ?s)
+  					     ("/Gmail-Personal-1/Drafts" . ?d)
+  		  )
+  		  )))
   	 (make-mu4e-context
   	  :name "Second Personal Gmail"
   	  :match-func
@@ -1235,7 +1257,14 @@ GNU patch review metho dor sometihng idk
   		  (mu4e-drafts-folder . "/Gmail-Personal-2/Drafts")
   		  (mu4e-sent-folder . "/Gmail-Personal-2/Sent Mail")
   		  (mu4e-refile-folder . "/Gmail-Personal-2/Inbox")
-  		  (mu4e-trash-folder . "Gmail-Personal-2/Trash")))
+  		  (mu4e-trash-folder . "Gmail-Personal-2/Trash")
+  		  (mu4e-maildir-shortcuts . (
+  					     ("/Gmail-Personal-2/Inbox" . ?i)
+  					     ("/Gmail-Personal-2/Sent Mail" . ?s)
+  					     ("/Gmail-Personal-2/Drafts" . ?d)
+  		  )
+  		  )))
+  	 
     	 ))
     )
 #+end_src
